<resources>
    <string name="app_name">DemoProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>
    <string name="location">Your Location</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="enter_phonetext">Enter your Phone number below to signup .</string>
    <string name="mobile">Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="instrunctionopt">We have sent an OTP code to your Mobile for Verification</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
</resources>
